--- a/web/index.html
+++ b/web/index.html
@@ -32,11 +32,13 @@
                 <span></span>
             </div>
             <div class="navigation-itens">
-                <a href="#quem-somos">Quem somos</a>
-                <a href="#eventos">Eventos</a>
-                <a href="#dia-a-dia">Dia-a-dia</a>
-                <a href="#contato">Contato</a>
-                <a href="#seja-um-doador">Doação</a>
+                <aside class="flex-col">
+                    <a href="#quem-somos">Quem somos</a>
+                    <a href="#eventos">Eventos</a>
+                    <a href="#dia-a-dia">Dia-a-dia</a>
+                    <a href="#contato">Contato</a>
+                    <a href="#seja-um-doador">Doação</a>
+                </aside>
             </div>
         </div>
     </div>
