--- a/web/index.html
+++ b/web/index.html
@@ -195,7 +195,7 @@
             </div>
             <div class="grid-x">
                 <div class="small-12 medium-8 grid-container">
-                    <div class="main-carousel" role="region" aria-label="Fotos do Novo Rumo" data-flickity='{ }'>
+                    <div class="main-carousel" role="region" aria-label="Fotos do Novo Rumo">
                         <div class="carousel-cell">
                             <img src="/images/dia-a-dia/exercicio-ao-ar-livre.jpg" alt="">
                         </div>
@@ -328,9 +328,9 @@
 
     <script type="text/javascript" src="./js/jquery.min.js"></script>
     <script type="text/javascript" src="./js/foundation.min.js"></script>
+    <script src="https://unpkg.com/flickity@2/dist/flickity.pkgd.min.js"></script>
     <script type="text/javascript" src="./js/skrollr.min.js" async></script>
     <script type="text/javascript" src="./js/skrollr.stylesheets.min.js" async></script>
-    <script src="https://unpkg.com/flickity@2/dist/flickity.pkgd.min.js" async></script>
 
     <div id="fb-root"></div>
     <script>
@@ -375,6 +375,10 @@
             $(body).toggleClass('nav-expanded');
             $(nav).addClass('hidden');
             indicadorAberturaMenu = !indicadorAberturaMenu;
+        });
+
+        $('.main-carousel').flickity({
+            arrowShape: 'M16,8l-1.4-1.4L9,12.2V0H7v12.2L1.4,6.6L0,8l8,8L16,8z'
         });
 
         function initSkroll() {
