--- a/web/index.html
+++ b/web/index.html
@@ -378,7 +378,7 @@
         });
 
         $('.main-carousel').flickity({
-            arrowShape: 'M16,8l-1.4-1.4L9,12.2V0H7v12.2L1.4,6.6L0,8l8,8L16,8z'
+            arrowShape: 'M92.5,42.5H25.6L37.8,30.3A7.5,7.5,0,1,0,27.2,19.7l-25,25a7.5,7.5,0,0,0,0,10.6l25,25a7.5,7.5,0,0,0,10.6,0,7.5,7.5,0,0,0,0-10.6L25.6,57.5H92.5a7.5,7.5,0,0,0,0-15Z'
         });
 
         function initSkroll() {
