--- a/web/index.html
+++ b/web/index.html
@@ -12,8 +12,8 @@
 </head>
 
 <body>
-    <div class="fb-like" data-href="https://developers.facebook.com/docs/plugins/" data-layout="button_count" data-action="like"
-        data-size="small" data-show-faces="false" data-share="false"></div>
+    <div class="fb-like" data-href="https://developers.facebook.com/docs/plugins/" data-layout="button_count"
+        data-action="like" data-size="small" data-show-faces="false" data-share="false"></div>
 
     <!-- HEADER -->
     <section id="header">
@@ -86,26 +86,35 @@
                         </a>
                     </div>
                 </div>
-                <div class="reveal large" id="open-text" data-reveal data-close-on-click="true" data-animation-in="fade-in" data-animation-out="fade-out">
+                <div class="reveal large" id="open-text" data-reveal data-close-on-click="true" data-animation-in="fade-in"
+                    data-animation-out="fade-out">
                     <div class="grid-x">
                         <div class="small-12 medium-3 cell">
                             <h4>TV Cultura</h4>
                         </div>
                         <div class="small-12 medium-9 cell">
-                            <p> Associação Novo Rumo Atibaia é uma instituição de assistência social sem fins lucrativos fundada
-                                em xxxx, direcionado a jovens e adultos com deficiência intelectual, que atende de segunta
+                            <p> Associação Novo Rumo Atibaia é uma instituição de assistência social sem fins
+                                lucrativos fundada
+                                em xxxx, direcionado a jovens e adultos com deficiência intelectual, que atende de
+                                segunta
                                 a sexta-feira das xx ás xx na região de Atibia. </p>
                             <p>
-                                Proposta da Associação Novo Rumo é fazer que todos ganhem a percepção de seu potencial através de atividades que são dadas
-                                no dia a dia. Não é dado foco na deficiência, monstrando que todos nós temos dificuldades
-                                e que todos nós podemos superá-las, com ajuda de amigos ou de algum profissional que esta
+                                Proposta da Associação Novo Rumo é fazer que todos ganhem a percepção de seu potencial
+                                através de atividades que são dadas
+                                no dia a dia. Não é dado foco na deficiência, monstrando que todos nós temos
+                                dificuldades
+                                e que todos nós podemos superá-las, com ajuda de amigos ou de algum profissional que
+                                esta
                                 acompanhando as atividades do dia.
                             </p>
 
                             <p>
-                                O nosso maior ganho e foco esta na melhora de qualidade de vida de cada aluno que recebos, tendo como objetivo a inserção
-                                desses jovens e adultos dentro da sociedade, promovendo a inclusão social. Para chegarmos
-                                neste objetivo com sucesso, tarbalhamos com nossos alunos todos os dias em atividades específicas.
+                                O nosso maior ganho e foco esta na melhora de qualidade de vida de cada aluno que
+                                recebos, tendo como objetivo a inserção
+                                desses jovens e adultos dentro da sociedade, promovendo a inclusão social. Para
+                                chegarmos
+                                neste objetivo com sucesso, tarbalhamos com nossos alunos todos os dias em atividades
+                                específicas.
                             </p>
                         </div>
                     </div>
@@ -128,62 +137,37 @@
                         <img src="images/idea-icon.png">
                         <h4>A Associação Novo Rumo precisa de doações para manter as suas atividades.</h4>
                     </div>
-                    <a data-toggle="docao-modal">
-                        <h4>Doe agora</h4>
-                    </a>
                 </div>
                 <div class="grid-x">
                     <div class="small-8 medium-4 large-8 cell hide-for-small-only"></div>
                     <div class="small-12 medium-12 large-4 cell text-center">
-                        <p>Sua doação é de extrema importância para nós, pois com ela podemos manter nossas atividades, realizar
+                        <p>Sua doação é de extrema importância para nós, pois com ela podemos manter nossas atividades,
+                            realizar
                             manutenção e para o desenvolvimento de novos projetos para nossa Associação.
                         </p>
                     </div>
                 </div>
             </div>
-
-            <div class="reveal large" id="docao-modal" data-reveal data-close-on-click="true" data-animation-in="fade-in" data-animation-out="fade-out">
-                <div class="grid-x">
-                    <div class="small-12 cell">
-                        <h4>Doação mensal</h4>
-                        SIM! QUERO SER UM DOADOR DO NOVO RUMO, CONTRIBUINDO MENSALMENTE COM:
-                        <div class="grid-x">
-                            <div class="callout grid-x">
-                                <div class="small-2">
-                                    R$ 30,00 (R$ 1,00 POR DIA)
-                                </div>
-                                <div class="small-1"> = </div>
-                                <div class="small-8">
-                                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum diam mauris, eleifend egestas sollicitudin eget, tempus
-                                    vitae mi. Nam lectus.
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                <button class="close-button" data-close aria-label="Close reveal" type="button">
-                    <span aria-hidden="true">&times;</span>
-                </button>
-            </div>
-
         </div>
         <div class="pink-content" id="eventos">
             <div class="grid-container grid-x">
                 <div class="small-12 medium-6 cell text-center">
                     <img src="/images/event-icon.png" />
                     <h3>Eventos</h3>
-                    <h4>Bazar
-                        <span class="title">Beneficente</span>
-                    </h4>
+                    <h4>Bazar<span class="title">Beneficente</span></h4>
                 </div>
                 <div class="small-12 medium-6 cell">
                     <h6 class="title text-center">Localização</h6>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec aliquet, ligula a convallis ullamcorper,
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec aliquet, ligula a convallis
+                        ullamcorper,
                         lorem lectus consectetur velit, non faucibus.</p>
                     <h6 class="title text-center">Descrição</h6>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris erat nulla, vehicula a nunc quis, porta
-                        luctus nisi. Duis id ligula a purus feugiat volutpat eget ut leo. Ut sit amet bibendum eros. Proin
-                        convallis eleifend velit. Donec facilisis quis purus ut mollis. Phasellus eget nibh in ex mattis
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris erat nulla, vehicula a nunc
+                        quis, porta
+                        luctus nisi. Duis id ligula a purus feugiat volutpat eget ut leo. Ut sit amet bibendum eros.
+                        Proin
+                        convallis eleifend velit. Donec facilisis quis purus ut mollis. Phasellus eget nibh in ex
+                        mattis
                         mollis.
                     </p>
                 </div>
@@ -194,7 +178,7 @@
                 <h3>Dia-a-dia</h3>
             </div>
             <div class="grid-x">
-                <div class="small-12 medium-8 grid-container">
+                <div class="small-12 medium-8 large-offset-2">
                     <div class="main-carousel" role="region" aria-label="Fotos do Novo Rumo" data-flickity='{ }'>
                         <div class="carousel-cell">
                             <img src="/images/dia-a-dia/exercicio-ao-ar-livre.jpg" alt="">
@@ -232,7 +216,6 @@
         </div>
         <div class="white-content" id="contato">
             <div class="grid-container grid-x">
-
                 <div class="small-12 medium-6 cell">
                     <h3>Contato</h3>
                     <table class="table table-sm" itemscope="" itemtype="http://schema.org/LocalBusiness">
@@ -258,9 +241,9 @@
                                 </td>
                                 <td itemprop="telephone">
                                     <a class="link" href="tel:+55 (11) 3402-1623">+55 (11) 3402-1623</a>
-                                    <br/>
+                                    <br />
                                     <a class="link" href="tel:+55 (11) 94777-5762">+55 (11) 94777-5762</a>
-                                    <br/>
+                                    <br />
                                     <a class="link" href="tel:+55 (11) 97100-5077">+55 (11) 97100-5077</a>
                                 </td>
                             </tr>
