--- a/web/index.html
+++ b/web/index.html
@@ -5,8 +5,8 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Associação Novo Rumo Atibaia</title>
-    <link rel="stylesheet" href="/css/app.min.css">
     <link rel="stylesheet" href="/css/flickity.min.css">
+    <link rel="stylesheet" href="/css/app.min.css">
     <link href="https://fonts.googleapis.com/css?family=Raleway:400,900" rel="stylesheet" async>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/motion-ui/1.1.1/motion-ui.min.css" async />
 </head>
@@ -173,7 +173,7 @@
                 </div>
             </div>
         </div>
-        <div class="pink-gradient-content no-bottom-padding" id="dia-a-dia">
+        <div class="grey-content no-bottom-padding" id="dia-a-dia">
             <div class="cell text-center">
                 <h3>Dia-a-dia</h3>
             </div>
@@ -361,6 +361,7 @@
         });
 
         $('.main-carousel').flickity({
+            pageDots: false,
             arrowShape: 'M92.5,42.5H25.6L37.8,30.3A7.5,7.5,0,1,0,27.2,19.7l-25,25a7.5,7.5,0,0,0,0,10.6l25,25a7.5,7.5,0,0,0,10.6,0,7.5,7.5,0,0,0,0-10.6L25.6,57.5H92.5a7.5,7.5,0,0,0,0-15Z'
         });
 
