--- a/web/index.html
+++ b/web/index.html
@@ -33,7 +33,7 @@
             </div>
             <div class="navigation-itens">
                 <aside class="flex-col">
-                    <a href="#quem-somos">Quem somos</a>
+                    <a href="#sobre-nos">Sobre nós</a>
                     <a href="#eventos">Eventos</a>
                     <a href="#dia-a-dia">Dia-a-dia</a>
                     <a href="#contato">Contato</a>
@@ -49,7 +49,7 @@
             <div class="top-bar-center">
                 <ul class="menu">
                     <li>
-                        <a href="#quem-somos">Quem somos</a>
+                        <a href="#sobre-nos">Sobre Nós</a>
                     </li>
                     <li>
                         <a href="#eventos">Eventos</a>
@@ -70,9 +70,9 @@
 
     <!-- BODY -->
     <div id="content">
-        <div class="blue-content text-center" id="quem-somos">
+        <div class="red-content text-center" id="sobre-nos">
             <div class="grid-container">
-                <h2>Quem somos</h2>
+                <h3>Sobre Nós</h3>
 
                 <div class="grid-x">
                     <div class="cell small-12 medium-6 responsive-bottom-space">
