--- a/web/index.html
+++ b/web/index.html
@@ -12,8 +12,8 @@
 </head>
 
 <body>
-    <div class="fb-like" data-href="https://developers.facebook.com/docs/plugins/" data-layout="button_count"
-        data-action="like" data-size="small" data-show-faces="false" data-share="false"></div>
+    <div class="fb-like" data-href="https://developers.facebook.com/docs/plugins/" data-layout="button_count" data-action="like"
+        data-size="small" data-show-faces="false" data-share="false"></div>
 
     <!-- HEADER -->
     <section id="header">
@@ -75,46 +75,41 @@
                 <h3>Sobre Nós</h3>
 
                 <div class="grid-x">
-                    <div class="cell small-12 medium-6 responsive-bottom-space">
-                        <a data-toggle="open-text">
-                            <img src="http://via.placeholder.com/500x250">
-                        </a>
-                    </div>
-                    <div class="cell small-12 medium-6">
-                        <a data-toggle="open-text">
-                            <img src="http://via.placeholder.com/500x250">
-                        </a>
+                    <div class="small-12 medium-8">
+                        <div class="main-carousel" role="region">
+                            <div class="carousel-cell">
+                                <a data-toggle="open-text">
+                                    <img src="http://via.placeholder.com/500x250">
+                                </a>
+                            </div>
+                            <div class="carousel-cell">
+                                <a data-toggle="open-text">
+                                    <img src="http://via.placeholder.com/500x250">
+                                </a>
+                            </div>
+                        </div>
                     </div>
                 </div>
-                <div class="reveal large" id="open-text" data-reveal data-close-on-click="true" data-animation-in="fade-in"
-                    data-animation-out="fade-out">
+                <div class="reveal large" id="open-text" data-reveal data-close-on-click="true" data-animation-in="fade-in" data-animation-out="fade-out">
                     <div class="grid-x">
                         <div class="small-12 medium-3 cell">
                             <h4>TV Cultura</h4>
                         </div>
                         <div class="small-12 medium-9 cell">
-                            <p> Associação Novo Rumo Atibaia é uma instituição de assistência social sem fins
-                                lucrativos fundada
-                                em xxxx, direcionado a jovens e adultos com deficiência intelectual, que atende de
-                                segunta
+                            <p> Associação Novo Rumo Atibaia é uma instituição de assistência social sem fins lucrativos fundada
+                                em xxxx, direcionado a jovens e adultos com deficiência intelectual, que atende de segunta
                                 a sexta-feira das xx ás xx na região de Atibia. </p>
                             <p>
-                                Proposta da Associação Novo Rumo é fazer que todos ganhem a percepção de seu potencial
-                                através de atividades que são dadas
-                                no dia a dia. Não é dado foco na deficiência, monstrando que todos nós temos
-                                dificuldades
-                                e que todos nós podemos superá-las, com ajuda de amigos ou de algum profissional que
-                                esta
+                                Proposta da Associação Novo Rumo é fazer que todos ganhem a percepção de seu potencial através de atividades que são dadas
+                                no dia a dia. Não é dado foco na deficiência, monstrando que todos nós temos dificuldades
+                                e que todos nós podemos superá-las, com ajuda de amigos ou de algum profissional que esta
                                 acompanhando as atividades do dia.
                             </p>
 
                             <p>
-                                O nosso maior ganho e foco esta na melhora de qualidade de vida de cada aluno que
-                                recebos, tendo como objetivo a inserção
-                                desses jovens e adultos dentro da sociedade, promovendo a inclusão social. Para
-                                chegarmos
-                                neste objetivo com sucesso, tarbalhamos com nossos alunos todos os dias em atividades
-                                específicas.
+                                O nosso maior ganho e foco esta na melhora de qualidade de vida de cada aluno que recebos, tendo como objetivo a inserção
+                                desses jovens e adultos dentro da sociedade, promovendo a inclusão social. Para chegarmos
+                                neste objetivo com sucesso, tarbalhamos com nossos alunos todos os dias em atividades específicas.
                             </p>
                         </div>
                     </div>
@@ -141,8 +136,7 @@
                 <div class="grid-x">
                     <div class="small-8 medium-4 large-8 cell hide-for-small-only"></div>
                     <div class="small-12 medium-12 large-4 cell text-center">
-                        <p>Sua doação é de extrema importância para nós, pois com ela podemos manter nossas atividades,
-                            realizar
+                        <p>Sua doação é de extrema importância para nós, pois com ela podemos manter nossas atividades, realizar
                             manutenção e para o desenvolvimento de novos projetos para nossa Associação.
                         </p>
                     </div>
@@ -154,20 +148,18 @@
                 <div class="small-12 medium-6 cell text-center">
                     <img src="/images/event-icon.png" />
                     <h3>Eventos</h3>
-                    <h4>Bazar<span class="title">Beneficente</span></h4>
+                    <h4>Bazar
+                        <span class="title">Beneficente</span>
+                    </h4>
                 </div>
                 <div class="small-12 medium-6 cell">
                     <h6 class="title text-center">Localização</h6>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec aliquet, ligula a convallis
-                        ullamcorper,
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec aliquet, ligula a convallis ullamcorper,
                         lorem lectus consectetur velit, non faucibus.</p>
                     <h6 class="title text-center">Descrição</h6>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris erat nulla, vehicula a nunc
-                        quis, porta
-                        luctus nisi. Duis id ligula a purus feugiat volutpat eget ut leo. Ut sit amet bibendum eros.
-                        Proin
-                        convallis eleifend velit. Donec facilisis quis purus ut mollis. Phasellus eget nibh in ex
-                        mattis
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris erat nulla, vehicula a nunc quis, porta
+                        luctus nisi. Duis id ligula a purus feugiat volutpat eget ut leo. Ut sit amet bibendum eros. Proin
+                        convallis eleifend velit. Donec facilisis quis purus ut mollis. Phasellus eget nibh in ex mattis
                         mollis.
                     </p>
                 </div>
@@ -179,7 +171,7 @@
             </div>
             <div class="grid-x">
                 <div class="small-12 medium-8 large-offset-2">
-                    <div class="main-carousel" role="region" aria-label="Fotos do Novo Rumo" data-flickity='{ }'>
+                    <div class="pictures-carousel" role="region" aria-label="Fotos do Novo Rumo" data-flickity='{ }'>
                         <div class="carousel-cell">
                             <img src="/images/dia-a-dia/exercicio-ao-ar-livre.jpg" alt="">
                         </div>
@@ -361,9 +353,16 @@
         });
 
         $('.main-carousel').flickity({
+            groupCells: 2,
             pageDots: false,
             arrowShape: 'M92.5,42.5H25.6L37.8,30.3A7.5,7.5,0,1,0,27.2,19.7l-25,25a7.5,7.5,0,0,0,0,10.6l25,25a7.5,7.5,0,0,0,10.6,0,7.5,7.5,0,0,0,0-10.6L25.6,57.5H92.5a7.5,7.5,0,0,0,0-15Z'
         });
+
+        $('.pictures-carousel').flickity({
+            pageDots: false,
+            arrowShape: 'M92.5,42.5H25.6L37.8,30.3A7.5,7.5,0,1,0,27.2,19.7l-25,25a7.5,7.5,0,0,0,0,10.6l25,25a7.5,7.5,0,0,0,10.6,0,7.5,7.5,0,0,0,0-10.6L25.6,57.5H92.5a7.5,7.5,0,0,0,0-15Z'
+        });
+
 
         function initSkroll() {
             skrollr.init({
