--- a/web/index.html
+++ b/web/index.html
@@ -71,18 +71,23 @@
     <!-- BODY -->
     <div id="content">
         <div class="red-content text-center" id="sobre-nos">
-            <div class="grid-container">
+            <div>
                 <h3>Sobre Nós</h3>
 
                 <div class="grid-x">
-                    <div class="small-12 medium-8">
+                    <div class="small-12">
                         <div class="main-carousel" role="region">
-                            <div class="carousel-cell">
+                            <div class="main-carousel-cell">
                                 <a data-toggle="open-text">
                                     <img src="http://via.placeholder.com/500x250">
                                 </a>
                             </div>
-                            <div class="carousel-cell">
+                            <div class="main-carousel-cell">
+                                <a data-toggle="open-text">
+                                    <img src="http://via.placeholder.com/500x250">
+                                </a>
+                            </div>
+                            <div class="main-carousel-cell">
                                 <a data-toggle="open-text">
                                     <img src="http://via.placeholder.com/500x250">
                                 </a>
@@ -170,7 +175,7 @@
                 <h3>Dia-a-dia</h3>
             </div>
             <div class="grid-x">
-                <div class="small-12 medium-8 large-offset-2">
+                <div class="small-12">
                     <div class="pictures-carousel" role="region" aria-label="Fotos do Novo Rumo" data-flickity='{ }'>
                         <div class="carousel-cell">
                             <img src="/images/dia-a-dia/exercicio-ao-ar-livre.jpg" alt="">
@@ -353,12 +358,14 @@
         });
 
         $('.main-carousel').flickity({
-            groupCells: 2,
+            draggable: false,
+            groupCells: true,
             pageDots: false,
             arrowShape: 'M92.5,42.5H25.6L37.8,30.3A7.5,7.5,0,1,0,27.2,19.7l-25,25a7.5,7.5,0,0,0,0,10.6l25,25a7.5,7.5,0,0,0,10.6,0,7.5,7.5,0,0,0,0-10.6L25.6,57.5H92.5a7.5,7.5,0,0,0,0-15Z'
         });
 
         $('.pictures-carousel').flickity({
+            draggable: false,
             pageDots: false,
             arrowShape: 'M92.5,42.5H25.6L37.8,30.3A7.5,7.5,0,1,0,27.2,19.7l-25,25a7.5,7.5,0,0,0,0,10.6l25,25a7.5,7.5,0,0,0,10.6,0,7.5,7.5,0,0,0,0-10.6L25.6,57.5H92.5a7.5,7.5,0,0,0,0-15Z'
         });
