Adicionado rodapé descente

--- a/web/index.html
+++ b/web/index.html
@@ -99,26 +99,35 @@
                         </div>
                     </div>
                 </div>
-                <div class="reveal large" id="open-text" data-reveal data-close-on-click="true" data-animation-in="fade-in" data-animation-out="fade-out">
+                <div class="reveal large" id="open-text" data-reveal data-close-on-click="true" data-animation-in="fade-in"
+                    data-animation-out="fade-out">
                     <div class="grid-x">
                         <div class="small-12 medium-3 cell">
                             <h4>TV Cultura</h4>
                         </div>
                         <div class="small-12 medium-9 cell">
-                            <p> Associação Novo Rumo Atibaia é uma instituição de assistência social sem fins lucrativos fundada
-                                em xxxx, direcionado a jovens e adultos com deficiência intelectual, que atende de segunta
+                            <p> Associação Novo Rumo Atibaia é uma instituição de assistência social sem fins
+                                lucrativos fundada
+                                em xxxx, direcionado a jovens e adultos com deficiência intelectual, que atende de
+                                segunta
                                 a sexta-feira das xx ás xx na região de Atibia. </p>
                             <p>
-                                Proposta da Associação Novo Rumo é fazer que todos ganhem a percepção de seu potencial através de atividades que são dadas
-                                no dia a dia. Não é dado foco na deficiência, monstrando que todos nós temos dificuldades
-                                e que todos nós podemos superá-las, com ajuda de amigos ou de algum profissional que esta
+                                Proposta da Associação Novo Rumo é fazer que todos ganhem a percepção de seu potencial
+                                através de atividades que são dadas
+                                no dia a dia. Não é dado foco na deficiência, monstrando que todos nós temos
+                                dificuldades
+                                e que todos nós podemos superá-las, com ajuda de amigos ou de algum profissional que
+                                esta
                                 acompanhando as atividades do dia.
                             </p>
 
                             <p>
-                                O nosso maior ganho e foco esta na melhora de qualidade de vida de cada aluno que recebos, tendo como objetivo a inserção
-                                desses jovens e adultos dentro da sociedade, promovendo a inclusão social. Para chegarmos
-                                neste objetivo com sucesso, tarbalhamos com nossos alunos todos os dias em atividades específicas.
+                                O nosso maior ganho e foco esta na melhora de qualidade de vida de cada aluno que
+                                recebos, tendo como objetivo a inserção
+                                desses jovens e adultos dentro da sociedade, promovendo a inclusão social. Para
+                                chegarmos
+                                neste objetivo com sucesso, tarbalhamos com nossos alunos todos os dias em atividades
+                                específicas.
                             </p>
                         </div>
                     </div>
@@ -145,7 +154,8 @@
                 <div class="grid-x">
                     <div class="small-8 medium-4 large-8 cell hide-for-small-only"></div>
                     <div class="small-12 medium-12 large-4 cell text-center">
-                        <p>Sua doação é de extrema importância para nós, pois com ela podemos manter nossas atividades, realizar
+                        <p>Sua doação é de extrema importância para nós, pois com ela podemos manter nossas atividades,
+                            realizar
                             manutenção e para o desenvolvimento de novos projetos para nossa Associação.
                         </p>
                     </div>
@@ -163,12 +173,16 @@
                 </div>
                 <div class="small-12 medium-6 cell">
                     <h6 class="title text-center">Localização</h6>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec aliquet, ligula a convallis ullamcorper,
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec aliquet, ligula a convallis
+                        ullamcorper,
                         lorem lectus consectetur velit, non faucibus.</p>
                     <h6 class="title text-center">Descrição</h6>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris erat nulla, vehicula a nunc quis, porta
-                        luctus nisi. Duis id ligula a purus feugiat volutpat eget ut leo. Ut sit amet bibendum eros. Proin
-                        convallis eleifend velit. Donec facilisis quis purus ut mollis. Phasellus eget nibh in ex mattis
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris erat nulla, vehicula a nunc
+                        quis, porta
+                        luctus nisi. Duis id ligula a purus feugiat volutpat eget ut leo. Ut sit amet bibendum eros.
+                        Proin
+                        convallis eleifend velit. Donec facilisis quis purus ut mollis. Phasellus eget nibh in ex
+                        mattis
                         mollis.
                     </p>
                 </div>
@@ -271,41 +285,62 @@
         </div>
     </div>
 
-    <!-- FOOTER -->
+    <div class="grid-container">
+        <div class="line"></div>
+    </div>
     <div class="footer">
-        <div class="grid-container">
-            <div class="grid-x hide-for-small-only">
-                <div class="small-6 cell">
-                    <h6>Sobre nós</h6>
-                </div>
-                <div class="small-6 cell">
-                    <h6>Contato</h6>
-                </div>
+        <div class="grid-container grid-x">
+            <div class="small-4">
+                <p><img src="http://via.placeholder.com/200x150"></p>
             </div>
-            <div class="grid-x hide-for-small-only">
-                <div class="small-6 cell">
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. </br>
-                        In eu sagittis felis. Etiam ante dui, iaculis vel augue et, gravida blandit nunc.</p>
-                </div>
-                <div class="small-6 cell">
-                    <a href="#">
-                        <div class="facebook social-icon">
-                            <img src="/images/fb.png" />
-                        </div>
-                    </a>
-                    <a href="mailto:contato@novorumoatibaia">
-                        <div class="email social-icon">
-                            <img src="/images/mail.png" />
-                        </div>
-                    </a>
-                </div>
+            <div class="small-4">
+                <h6>Explore</h6>
+                <a href="">
+                    Quem somos
+                </a>
             </div>
-            <div class="grid-x info">
-                <div class="small-12 cell">
-                    <p>Desenvolvido com carinho por
-                        <a href="http://www.victorfontana.com.br">Victor Fontana</a>
-                    </p>
-                </div>
+            <div class="small-4">
+                <h6>Envolva-se</h6>
+                <a href="">
+                    Doe agora
+                </a>
+            </div>
+        </div>
+        <div class="grid-container grid-x">
+            <div class="small-12 medium-8">
+                <p>© Associação Novo Rumo</p>
+            </div>
+            <div class="small-12 medium-4 footer__social">
+                <a href="#" class="footer__social__link" title="Facebook" target="_blank">
+                    <span class="icon icon-facebook">
+                        <svg aria-hidden="true" role="img" xmlns="http://www.w3.org/2000/svg" x="0px" y="0px" viewBox="0 0 20 20"
+                            style="enable-background:new 0 0 20 20;" xml:space="preserve">
+                            <path class="st0" d="M18.9,0H1.1C0.5,0,0,0.5,0,1.1v17.8C0,19.5,0.5,20,1.1,20h9.6v-7.7H8.1v-3h2.6V7c0-2.6,1.6-4,3.9-4
+        c1.1,0,2.1,0.1,2.3,0.1v2.7h-1.6c-1.3,0-1.5,0.6-1.5,1.5v1.9h3l-0.4,3h-2.6V20h5.1c0.6,0,1.1-0.5,1.1-1.1V1.1C20,0.5,19.5,0,18.9,0"></path>
+                        </svg>
+                    </span>
+                </a>
+                <a href="https://www.instagram.com/" class="footer__social__link" title="Instagram" target="_blank">
+                    <span class="icon icon-instagram ">
+                        <svg aria-hidden="true" role="img" xmlns="http://www.w3.org/2000/svg" viewBox="-576 768 22 22"
+                            style="enable-background:new -576 768 22 22;" xml:space="preserve">
+                            <path d="M-559.1,771.8c-0.7,0-1.3,0.6-1.3,1.3c0,0.7,0.6,1.3,1.3,1.3c0.7,0,1.3-0.6,1.3-1.3
+		C-557.8,772.4-558.4,771.8-559.1,771.8L-559.1,771.8z M-565,782.7c-2,0-3.7-1.6-3.7-3.7c0-2,1.6-3.7,3.7-3.7c2,0,3.7,1.6,3.7,3.7
+		C-561.3,781-563,782.7-565,782.7L-565,782.7z M-565,773.3c-3.1,0-5.6,2.5-5.6,5.6c0,3.1,2.5,5.6,5.6,5.6s5.6-2.5,5.6-5.6
+		C-559.4,775.9-561.9,773.3-565,773.3L-565,773.3z M-556,783.4c0,1.1-0.2,1.7-0.4,2c-0.2,0.5-0.4,0.9-0.8,1.3
+		c-0.4,0.4-0.8,0.6-1.3,0.8c-0.4,0.2-1,0.3-2,0.4c-1.2,0.1-1.5,0.1-4.4,0.1s-3.3,0-4.4-0.1c-1.1,0-1.7-0.2-2-0.4
+		c-0.5-0.2-0.9-0.4-1.3-0.8c-0.4-0.4-0.6-0.8-0.8-1.3c-0.2-0.4-0.3-1-0.4-2c-0.1-1.2-0.1-1.5-0.1-4.4s0-3.3,0.1-4.4
+		c0-1.1,0.2-1.7,0.4-2c0.2-0.5,0.4-0.9,0.8-1.3c0.4-0.4,0.8-0.6,1.3-0.8c0.4-0.2,1-0.3,2-0.4c1.2-0.1,1.5-0.1,4.4-0.1s3.3,0,4.4,0.1
+		c1.1,0,1.7,0.2,2,0.4c0.5,0.2,0.9,0.4,1.3,0.8c0.4,0.4,0.6,0.7,0.8,1.3c0.2,0.4,0.3,1,0.4,2c0.1,1.2,0.1,1.5,0.1,4.4
+		C-556,781.9-556,782.3-556,783.4L-556,783.4z M-554.6,771.8c-0.3-0.7-0.7-1.3-1.3-1.9c-0.6-0.6-1.2-1-1.9-1.3
+		c-0.7-0.3-1.5-0.5-2.7-0.5c-1.2-0.1-1.5-0.1-4.5-0.1s-3.4,0-4.5,0.1c-1.2,0.1-2,0.2-2.7,0.5c-0.7,0.3-1.3,0.7-1.9,1.3
+		c-0.6,0.6-1,1.2-1.3,1.9c-0.3,0.7-0.5,1.5-0.5,2.7c-0.1,1.2-0.1,1.5-0.1,4.5s0,3.4,0.1,4.5c0.1,1.2,0.2,2,0.5,2.7
+		c0.3,0.7,0.7,1.3,1.3,1.9c0.6,0.6,1.2,1,1.9,1.3c0.7,0.3,1.5,0.5,2.7,0.5c1.2,0.1,1.5,0.1,4.5,0.1s3.4,0,4.5-0.1
+		c1.2-0.1,2-0.2,2.7-0.5c0.7-0.3,1.3-0.7,1.9-1.3c0.6-0.6,1-1.2,1.3-1.9c0.3-0.7,0.5-1.5,0.5-2.7c0.1-1.2,0.1-1.5,0.1-4.5
+		s0-3.4-0.1-4.5C-554.1,773.3-554.3,772.5-554.6,771.8L-554.6,771.8z"></path>
+                        </svg>
+                    </span>
+                </a>
             </div>
         </div>
     </div>
