--- a/web/index.html
+++ b/web/index.html
@@ -251,12 +251,12 @@
     </div>
     <div class="footer">
         <div class="grid-container grid-x">
-            <div class="small-12 medium-4">
+            <div class="small-12 medium-4 cell">
                 <p>
                     <img src="http://via.placeholder.com/200x150">
                 </p>
             </div>
-            <div class="small-12 medium-4">
+            <div class="small-6 medium-4 cell">
                 <h6>Explore</h6>
                 <div class="small-12">
                     <a href="">Sobre nós</a>
@@ -268,7 +268,7 @@
                     <a href="">Dia-a-dia</a>
                 </div>
             </div>
-            <div class="small-12 medium-4">
+            <div class="small-6 medium-4 cell">
                 <h6>Envolva-se</h6>
                 <a href="">
                     Doe agora
@@ -276,7 +276,7 @@
             </div>
         </div>
         <div class="grid-container grid-x">
-            <div class="small-12 medium-8">
+            <div class="small-12 medium-8 hide-for-small-only">
                 <p>© Associação Novo Rumo</p>
             </div>
             <div class="small-12 medium-4 footer__social">
@@ -318,6 +318,9 @@
                         </svg>
                     </span>
                 </a>
+            </div>
+            <div class="small-12 medium-8 show-for-small-only">
+                <p>© Associação Novo Rumo</p>
             </div>
         </div>
     </div>
