--- a/web/index.html
+++ b/web/index.html
@@ -251,28 +251,38 @@
     </div>
     <div class="footer">
         <div class="grid-container grid-x">
-            <div class="small-12 medium-4 cell">
+            <div class="small-12 medium-4">
                 <p>
                     <img src="http://via.placeholder.com/200x150">
                 </p>
             </div>
-            <div class="small-6 medium-4 cell">
-                <h6>Explore</h6>
-                <div class="small-12">
-                    <a href="">Sobre nós</a>
-                </div>
-                <div class="small-12">
-                    <a href="">Eventos</a>
-                </div>
-                <div class="small-12">
-                    <a href="">Dia-a-dia</a>
-                </div>
+            <div class="small-6 medium-4">
+                <ul class="vertical menu">
+                    <li class="menu-text">
+                        Explore
+                    </li>
+                    <li>
+                        <a href="">Sobre nós</a>
+                    </li>
+                    <li>
+                        <a href="">Eventos</a>
+                    </li>
+                    <li>
+                        <a href="">Dia-a-dia</a>
+                    </li>
+                </ul>
             </div>
-            <div class="small-6 medium-4 cell">
-                <h6>Envolva-se</h6>
-                <a href="">
-                    Doe agora
-                </a>
+            <div class="small-6 medium-4">
+                <ul class="vertical menu">
+                    <li class="menu-text">
+                        Envolva-se
+                    </li>
+                    <li>
+                        <a href="">
+                            Doe agora
+                        </a>
+                    </li>
+                </ul>
             </div>
         </div>
         <div class="grid-container grid-x">
